# utils

./: .gitignore  README.md  jenkins_install.sh
ansible/: README.md  ansible_commands_withno_explanation.txt  geerlingguy_notes.md  inventory  pb.yaml  playbook.md  shell_pb.yaml  with_time_pb.yaml
ansible/playbook_local_demo/: README.md  main.yml
bazel/: .gitignore  BUILD  README.md  hi_bazel.cpp  hi_lib.cpp  hi_lib.h
bazel/hello-bazel/: BUILD  README.md  main.cpp
bazel/hello-dep/: BUILD  cur_time.cpp  cur_time.h  main.cpp
bazel/hello-lib/: BUILD  main.cpp  util.cpp  util.h
cmake/: README.md  create_mult_exes.cmake
cmake/01_hello_make/: CMakeLists.txt  hello_cmake.cpp
cmake/02_include_dir/: hello_include.cpp
cmake/03_shared_lib/: CMakeLists.txt
cmake/06_use_shared_lib/: CMakeLists.txt
cmake/basic/: .gitignore  CMakeLists.txt  README.md  extra_make.md  in_build_variable_list.cmake  tut_cmake.md
cmake/basic/01_hello_make/: CMakeLists.txt
cmake/basic/02_include_dir/: CMakeLists.txt
cmake/basic/02_include_dir/include/: test.h
cmake/basic/04_static_lib/: CMakeLists.txt
cmake/basic/04_static_lib/src/: test.cpp
cmake/basic/05_use_static_lib/: CMakeLists.txt  demo_static_lib.cpp
cmake/basic/06_use_shared_lib/: CMakeLists.txt
docker/: docker_installation.md  docker_notes.md
git/: README.md  add_ssh_key_for_device.md  git_keys.txt  git_notes.md  git_tricks.md
googletest/: README.md
linux/: 01_hello_script.sh  02_pos_params.sh  03_loop.sh  04_func.sh  05_switch.sh  06_getopts.sh  2.txt  bash_env.md  file1  file_through_cat.txt  filename  grep_commands.md  linux_commands.md  misc_utility_commands.txt  sed_replace_txt.sh  shellscript.md  test.sh  vim_commands.md  whofile
linux/shellscript/: .03_check_range.sh.swp  02_ifelse.sh  03_check_range.sh  README.md
markdown/: mark_down_notes.md
vscode/: README.md
yaml/: README.md  output.yaml  sample.yaml  yaml_parser.py
